@@ -4,6 +4,12 @@ Started 2007-June-11
 Please add newer entries at the top, list the date and your name with 
 email address.
 
+2007-sept-04 UPDATE   Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
+================================================================================
++ pcbnew
+	better comments in editrack-part2 (the todo remark solved) 
++ todo.txt: note about editrack-part2 modified (problem solved)
+
 
 2007-Aug-31 UPDATE   Dick Hollenbeck <dick@softplc.com>
 ================================================================================
